--- a/index.html
+++ b/index.html
@@ -5,50 +5,21 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Guiqvv.github.io : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
     <title>The domain is for sale!</title>
   </head>
 
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/guiqvv">View on GitHub</a>
-
-          <h1 id="project_title">Guiqvv.github.io</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-<div>
-<p>
-The domain is for sale!
-</p>
-<p>
-E-mail:guiqvv@126.com
-</p>
-</div>
-
-<p>
-</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+	<div style="text-align: center; margin-top: 200px; background-color: gray; height: 200px; padding-top: 20px; font-size: 30px; color: blanchedalmond;">
+	<p>
+	The domain is for sale!
+	</p>
+	<p>
+	E-mail:guiqvv@126.com
+	</p>
+	</div>
+	<script type="text/javascript">
+	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F1b6bd0cc588563e2e61da7838466c527' type='text/javascript'%3E%3C/script%3E"));
+	</script>
   </body>
 </html>
