--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-	<div style="text-align: center; margin-top: 200px; background-color: gray; height: 200px; padding-top: 20px; font-size: 30px; color: blanchedalmond;">
+	<div style="text-align: center; margin-top: 200px; background-color: gray; height: 200px; padding-top: 20px; font-size: 30px; color: blanchedalmond; font-weight: bold;">
 	<p>
 	The domain is for sale!!!
 	</p>
