--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
 
   <body>
-	<div style="text-align: center; margin-top: 200px; background-color: gray; height: 200px; padding-top: 20px; font-size: 30px; color: blanchedalmond; font-weight: bold;">
-	<p>
+	<div style="text-align: center; margin-top: 200px; background-color: gray; height: 200px; padding-top: 20px; color: blanchedalmond; font-weight: bold;">
+	<p style="font-size: 40px;">
 	The domain is for sale!!!
 	</p>
-	<p>
+	<p style="font-size: 30px;">
 	E-mail:guiqvv@126.com
 	</p>
 	</div>
