--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <body>
 	<div style="text-align: center; margin-top: 200px; background-color: gray; height: 200px; padding-top: 20px; color: blanchedalmond; font-weight: bold;">
 	<p style="font-size: 40px;">
-	The domain is for sale!!!
+	The domain is for sale!!web
 	</p>
 	<p style="font-size: 30px;">
 	E-mail:guiqvv@126.com
