--- a/web/index.html
+++ b/web/index.html
@@ -11,10 +11,10 @@
   <body>
 	<div style="text-align: center; margin-top: 200px; background-color: gray; height: 200px; padding-top: 20px; color: blanchedalmond; font-weight: bold;">
 	<p style="font-size: 40px;">
-	The domain is for sale!!web
+	The domain is for sale!!!
 	</p>
 	<p style="font-size: 30px;">
-	E-mail:guiqvv@126.com
+	E-mail:<span style="color: cyan;">guiqvv@126.com</span>
 	</p>
 	</div>
 	<script type="text/javascript">
